# Melina

./: .gitignore  README.md  meson.build  pyproject.toml
melina/: app.py  editor.py  renderer.py  toolbar.py  window.py
src/: application.vala  editor.vala  main.vala  renderer.vala  toolbar.vala  window.vala
