[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "melina"
version = "0.1.0"
description = "Melina — a simple markdown editor for Linux"
requires-python = ">=3.10"
dependencies = ["markdown>=3.4"]

[project.scripts]
melina = "melina.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["melina*"]
